# sgminer4a11

./: .gitignore  01-sgminer.rules  A1-board-selector-CCD.c  A1-board-selector-CCR.c  A1-board-selector.h  A1-common.h  A1-desk-board-selector.c  A1-trimpot-mcp4x.c  A1-trimpot-mcp4x.h  Makefile.am  api-example.c  api.c  asic_b29.c  asic_b29.h  asic_b29_clock.c  asic_b29_clock.h  asic_b29_cmd.c  asic_b29_cmd.h  asic_b29_gpio.c  asic_b29_gpio.h  asic_inno.c  asic_inno.h  asic_inno_clock.c  asic_inno_clock.h  asic_inno_cmd.c  asic_inno_cmd.h  asic_inno_gpio.c  asic_inno_gpio.h  compat.h  configure.ac  darkcoin.bat  darkcoin.c  darkcoin.h  dm_fan_ctrl.c  dm_fan_ctrl.h  dm_temp_ctrl.c  dm_temp_ctrl.h  dragonmint_a11.c  dragonmint_a11_clock.c  dragonmint_a11_clock.h  (+44 more)
ccan/compiler/: compiler.h
ccan/compiler/test/: compile_fail-printf.c  run-is_compile_constant.c
ccan/opt/: helpers.c  opt.c  opt.h  parse.c  private.h  usage.c
ccan/opt/test/: compile_ok-const-arg.c  run-checkopt.c  run-correct-reporting.c  run-helpers.c  run-iter.c  run-no-options.c  run-usage.c  run.c  utils.c
ccan/typesafe_cb/: typesafe_cb.h
ccan/typesafe_cb/test/: compile_fail-cast_if_type-promotable.c  compile_fail-typesafe_cb-int.c  compile_fail-typesafe_cb.c  compile_fail-typesafe_cb_cast-multi.c  compile_fail-typesafe_cb_cast.c  compile_fail-typesafe_cb_postargs.c  compile_fail-typesafe_cb_preargs.c  compile_ok-typesafe_cb-NULL.c  compile_ok-typesafe_cb-undefined.c  compile_ok-typesafe_cb-vars.c  compile_ok-typesafe_cb_cast.c  run.c
compat/: Makefile.am
si/: sgminer_in_miner.IAB  sgminer_in_miner.IAD  sgminer_in_miner.IMB  sgminer_in_miner.IMD  sgminer_in_miner.PFI  sgminer_in_miner.PO  sgminer_in_miner.PR  sgminer_in_miner.PRI  sgminer_in_miner.PS  sgminer_in_miner.SearchResults  sgminer_in_miner.WK3
sph/: aes_helper.c  blake.c  cubehash.c  echo.c  fugue.c  groestl.c  hamsi.c  hamsi_helper.c  jh.c  keccak.c  luffa.c  panama.c  sha2.c  sha2big.c  shavite.c  simd.c  skein.c  sph_blake.h  sph_bmw.h  sph_cubehash.h  sph_echo.h  sph_fugue.h  sph_groestl.h  sph_hamsi.h  sph_jh.h  sph_keccak.h  sph_luffa.h  sph_panama.h  sph_shavite.h  sph_simd.h  sph_skein.h
